--- a/app/index.html
+++ b/app/index.html
@@ -33,9 +33,9 @@
     <header>
       <div class="container">
         <nav>
-          <img src="img/logo.svg" alt="" />
+          <img src="img/logo1.svg" alt="" />
           <a class="d-none d-sm-block " href="#form-field"
-            >Get Early Access <img src="img/ico-arrow1.svg" alt="" />
+            >Obten Acceso <img src="img/ico-arrow1.svg" alt="" />
           </a>
         </nav>
       </div>
@@ -46,7 +46,7 @@
         <div class="row">
           <div class="col">
             <h1>
-              Ready for the next big thing?
+              Estas listo para the next big thing?
             </h1>
             <h2>
               We’re ready to revolutionize and disrupt the market like no other
