--- a/app/index.html
+++ b/app/index.html
@@ -130,7 +130,7 @@
     <footer>
       <img src="img/logo.svg" alt="" />
       <p>
-        © StartupName 2019 All Rights Reserved
+        © AgistStudio 2020 All Rights Reserved
       </p>
     </footer>
 
