--- a/app/index.html
+++ b/app/index.html
@@ -46,7 +46,7 @@
         <div class="row">
           <div class="col">
             <h1>
-              Estas listo para the next big thing?
+              Estas listo for the next big thing?
             </h1>
             <h2>
               We’re ready to revolutionize and disrupt the market like no other
